--- a/app/index.html
+++ b/app/index.html
@@ -13,20 +13,39 @@
   <link href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
   <link href="../bower_components/bootstrap/dist/css/bootstrap-theme.min.css">
   <link href="../bower_components/font-awesome/css/font-awesome.min.css">
+  <link href="../bower_components/toastr/toastr.min.css" rel="stylesheet"/>
   <link href="styles/app.styles.css">
   <!-- endbuild -->
 </head>
 
 <body ng-app="AppModule">
- 
-  <search-country></search-country>
-
-  <div class="overlay" style="display: none">
-    <i class="fa fa-spinner fa-5x fa-spin"></i>
+  <div class="site-wrapper">
+    <div class="site-wrapper-inner">
+      <div class="cover-container">
+        <div class="masthead clearfix">
+          <div class="inner">
+            <h3 class="masthead-brand">Search country</h3>
+            <nav>
+              <ul class="nav masthead-nav">
+                <li class="active"><a href="http://localhost:3000">Home</a></li>
+                <li><a href="https://github.com/giuseScara/angular-search-country" target="_blank">Source code</a></li>
+                <li><a href="https://it.linkedin.com/in/giuseppe-scaramuzzino-b1453b74/en" target="_blank">Profile</a></li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+        <div class="inner cover">
+          <h1 class="cover-heading">Angular search counrty</h1>
+          <p class="lead">A UI which allows the user to search for countries by names, add them to a list one by one, and submit list of selected countries to the server.</p>
+          <search-country/>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- build:js scripts/scripts.js -->
   <script src="../bower_components/jquery/dist/jquery.min.js"></script>
   <script src="../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../bower_components/toastr/toastr.min.js"></script>
   <script src="../bower_components/angular/angular.min.js"></script>
   <script src="scripts/app.js"></script>
   <script src="components/search/search.service.js"></script>
